resize main blocks (change height) and add icon to login form

--- a/index.html
+++ b/index.html
@@ -312,15 +312,17 @@
                                     <div class="monitored_time">
                                         Monitored : 153 Days
                                     </div>
-                                    <div class="project_status"><span class="pending">Pending</span></div>
                                 </div>
-                                <div class="number">
-                                    <span>49</span>
+                                <div class="project_right">
+                                    <div class="project_status"><span class="pending">Pending</span></div>
+                                    <div class="number">
+                                        <span>37</span>
+                                    </div>
                                 </div>
                             </div>
                             <div class="progress_bar">
                                 <div class="bar">
-                                    <div class="progress"></div>
+                                    <div class="progress"><span>30%</span></div>
                                 </div>
                             </div>
                             <div class="info_wrapper">
@@ -370,13 +372,15 @@
                                             <p>Referral:</p><span>10%</span>
                                         </li>
                                     </ul>
-                                    <ul class="investors">
-                                        <li><a href=""></a></li>
-                                        <li><a href=""></a></li>
-                                    </ul>
+                                    <div class="flex_justify">
+                                        <ul class="investors">
+                                            <li><a href=""></a></li>
+                                            <li><a href=""></a></li>
+                                        </ul>
+                                        <a href="" class="request_rgb"><span>Request RGB</span></a>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="percent_success">Request RGB 2.5 %</div>
                             <div class="plan_info">
                                 <span>Plans: 1.0% Dally for 30 days,</span>
                                 <span>1.2% Dally for 60 days,</span>
@@ -415,15 +419,17 @@
                                     <div class="monitored_time">
                                         Monitored : 153 Days
                                     </div>
-                                    <div class="project_status"><span class="success">Paying</span></div>
                                 </div>
-                                <div class="number">
-                                    <span>37</span>
+                                <div class="project_right">
+                                    <div class="project_status"><span class="success">Paying</span></div>
+                                    <div class="number">
+                                        <span>37</span>
+                                    </div>
                                 </div>
                             </div>
                             <div class="progress_bar">
                                 <div class="bar">
-                                    <div class="progress"></div>
+                                    <div class="progress"><span>30%</span></div>
                                 </div>
                             </div>
                             <div class="info_wrapper">
@@ -473,13 +479,15 @@
                                             <p>Referral:</p><span>10%</span>
                                         </li>
                                     </ul>
-                                    <ul class="investors">
-                                        <li><a href=""></a></li>
-                                        <li><a href=""></a></li>
-                                    </ul>
+                                    <div class="flex_justify">
+                                        <ul class="investors">
+                                            <li><a href=""></a></li>
+                                            <li><a href=""></a></li>
+                                        </ul>
+                                        <a href="" class="request_rgb"><span>Request RGB</span></a>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="percent_success">Request RGB 2.5 %</div>
                             <div class="plan_info">
                                 <span>Plans: 1.0% Dally for 30 days,</span>
                                 <span>1.2% Dally for 60 days,</span>
@@ -518,15 +526,17 @@
                                     <div class="monitored_time">
                                         Monitored : 153 Days
                                     </div>
-                                    <div class="project_status"><span class="success">Paying</span></div>
                                 </div>
-                                <div class="number">
-                                    <span>37</span>
+                                <div class="project_right">
+                                    <div class="project_status"><span class="success">Paying</span></div>
+                                    <div class="number">
+                                        <span>37</span>
+                                    </div>
                                 </div>
                             </div>
                             <div class="progress_bar">
                                 <div class="bar">
-                                    <div class="progress"></div>
+                                    <div class="progress"><span>30%</span></div>
                                 </div>
                             </div>
                             <div class="info_wrapper">
@@ -576,13 +586,15 @@
                                             <p>Referral:</p><span>10%</span>
                                         </li>
                                     </ul>
-                                    <ul class="investors">
-                                        <li><a href=""></a></li>
-                                        <li><a href=""></a></li>
-                                    </ul>
+                                    <div class="flex_justify">
+                                        <ul class="investors">
+                                            <li><a href=""></a></li>
+                                            <li><a href=""></a></li>
+                                        </ul>
+                                        <a href="" class="request_rgb"><span>Request RGB</span></a>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="percent_success">Request RGB 2.5 %</div>
                             <div class="plan_info">
                                 <span>Plans: 1.0% Dally for 30 days,</span>
                                 <span>1.2% Dally for 60 days,</span>
@@ -621,15 +633,17 @@
                                     <div class="monitored_time">
                                         Monitored : 153 Days
                                     </div>
-                                    <div class="project_status"><span class="failed">Failed</span></div>
                                 </div>
-                                <div class="number">
-                                    <span>37</span>
+                                <div class="project_right">
+                                    <div class="project_status"><span class="failed">Failed</span></div>
+                                    <div class="number">
+                                        <span>37</span>
+                                    </div>
                                 </div>
                             </div>
                             <div class="progress_bar">
                                 <div class="bar">
-                                    <div class="progress"></div>
+                                    <div class="progress"><span>30%</span></div>
                                 </div>
                             </div>
                             <div class="info_wrapper">
@@ -679,13 +693,15 @@
                                             <p>Referral:</p><span>10%</span>
                                         </li>
                                     </ul>
-                                    <ul class="investors">
-                                        <li><a href=""></a></li>
-                                        <li><a href=""></a></li>
-                                    </ul>
+                                    <div class="flex_justify">
+                                        <ul class="investors">
+                                            <li><a href=""></a></li>
+                                            <li><a href=""></a></li>
+                                        </ul>
+                                        <a href="" class="request_rgb"><span>Request RGB</span></a>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="percent_success">Request RGB 2.5 %</div>
                             <div class="plan_info">
                                 <span>Plans: 1.0% Dally for 30 days,</span>
                                 <span>1.2% Dally for 60 days,</span>
@@ -717,9 +733,11 @@
                             <input type="hidden" name="a" value="do_login">
                             <input type="hidden" name="referrer" value="/">
                             <div class="form_wrapp">
+                                <i class="fas fa-envelope email_icon" aria-hidden="true"></i>
                                 <input type="email" name="" placeholder="Email" id="">
                             </div>
                             <div class="form_wrapp">
+                                <i class="fas fa-key"></i>
                                 <input type="password" placeholder="Password" name="" id="">
                             </div>
                             <div class="form_wrapp">
