--- a/index.html
+++ b/index.html
@@ -52,16 +52,31 @@
         <div class="left_sidebar">
             <ul class="main_menu">
                 <li><a href=""><i class="fas fa-home"></i>Home</a></li>
-                <li><a href=""><i class="fas fa-user"></i>About Us</a></li>
-                <li><a href=""><i class="fas fa-newspaper"></i>News</a></li>
-                <li><a href=""><i class="fas fa-blog"></i>Blog</a>
-
+                <li class="added_menu"><a href="#"><i class="fas fa-layer-group"></i>Projects</a>
+                    <ul>
+                        <li><a href="">Latest Added</a></li>
+                        <li><a href="">Vip Projects</a></li>
+                        <li><a href="">Exclusive Projects</a></li>
+                        <li><a href="">Premium Projects</a></li>
+                        <li><a href="">Standard Projects</a></li>
+                        <li><a href="">Black list</a></li>
+                    </ul>
                 </li>
-                <li><a href=""><i class="fas fa-star"></i>Add Hyip</a></li>
-                <li><a href=""><i class="fas fa-star-of-life"></i>Add Banner</a></li>
-                <li><a href=""><i class="fas fa-plus"></i>Add Paid Sticky Hyip</a></li>
-                <li><a href=""><i class="fas fa-phone"></i>Contact Us</a></li>
-                <li><a href=""><i class="fas fa-user-plus"></i>Register</a></li>
+                <li class="added_menu"><a href="#"><i class="fas fa-newspaper"></i>Articles</a>
+                <ul>
+                    <li><a href="">News</a></li>
+                    <li><a href="">Reviews</a></li>
+                    <li><a href="">Hyip Service</a></li>
+                    <li><a href="">FAQ</a></li>
+                </ul>
+                </li>
+                <li><a href=""><i class="fas fa-shield-alt"></i>Insurance</a></li>
+                <li><a href=""><i class="fas fa-gift"></i>Bonus</a></li>
+                <li class="color_menu"><a href=""><i class="fas fa-plus"></i>Add Project</a></li>
+                <li class="color_menu"><a href=""><i class="fas fa-bullhorn"></i>Advertise</a></li>
+                <li><a href=""><i class="fas fa-user"></i>Login</a></li>
+                <li><a href=""><i class="fas fa-user-plus"></i>Sign Up</a></li>
+                <li><a href=""><i class="fas fa-phone-alt"></i>Contact Us</a></li>
             </ul>
             <div class="subscribe">
                 <div class="title_block"><span>Subscribe</span></div>
@@ -847,6 +862,42 @@
             </div>
         </main>
     </div>
+    <footer>
+        <div class="footer_wrapper">
+            <div class="company_info">
+                <img src="https://eurohyips.net/img/logo.png" alt="">
+                <p class="text_after_logo">Be connect with us</p>
+                <ul>
+                    <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href=""><i class="fab fa-google-plus-g"></i></a></li>
+                    <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                    <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                </ul>
+                <p class="copiryght">ⓒ 2020 Eurohyips. All rights reserved.</p>
+            </div>
+            <div class="contact_us">
+                <h1>Contact Us</h1>
+                <ul>
+                    <li><i class="fas fa-map-marker-alt"></i>121 Great Avenue, Texas 000</li>
+                    <li><i class="fas fa-envelope"></i>info@companyname.com</li>
+                    <li><i class="fas fa-phone"></i>(00) 000 0000 00</li>
+                </ul>
+            </div>
+            <div class="subscribe">
+                <h1>Subscribe</h1>
+                <form action="">
+                    <input type="radio" id="subscribeFooter" name="action" value="subscribe" checked="">
+                    <label for="subscribeFooter">Subscribe</label>
+                    <input type="radio" id="unsubscribeFooter" name="action" value="unsubscribe">
+                    <label for="unsubscribeFooter">Unsubscribe</label>
+                    <div class="subscribe_form">
+                        <input required type="email" name="" id="">
+                        <input type="submit" value=">">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </footer>
 </div>
 <script src="index.js"></script>
 </body>
